--- a/LaybackKicks/pages/stock.html
+++ b/LaybackKicks/pages/stock.html
@@ -17,16 +17,18 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
+                            <th>ID Producto</th>
                             <th>Producto</th>
                             <th>Marca</th>
                             <th>Talla</th>
                             <th>Condicion</th>
                             <th>Cantidad</th>
+                            <th>Precio Compra</th>
+                            <th>Precio Venta</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!-- datos de la bd -->
+                    <tbody id="product-list">
                     </tbody>
                 </table>
             </div>
@@ -74,10 +76,62 @@
         </div>
     </div>
 
-    <!-- jQuery -->
+
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Editar Producto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editar-producto">
+                        <input type="hidden" id="edit-id-producto">
+                        <div class="mb-3">
+                            <label for="edit-marca" class="form-label">Marca</label>
+                            <input type="text" class="form-control" id="edit-marca" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-modelo" class="form-label">Modelo</label>
+                            <input type="text" class="form-control" id="edit-modelo" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-talla" class="form-label">Talla</label>
+                            <input type="number" class="form-control" id="edit-talla" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-condicion" class="form-label">Condicion</label>
+                            <select class="form-select" id="edit-condicion" required>
+                                <option value="nuevo">Nuevo</option>
+                                <option value="usado">Usado</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-cantidad" class="form-label">Cantidad</label>
+                            <input type="number" class="form-control" id="edit-cantidad" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-precio-compra" class="form-label">Precio de Compra</label>
+                            <input type="number" class="form-control" id="edit-precio-compra" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-precio-venta" class="form-label">Precio Estimado de Venta</label>
+                            <input type="number" class="form-control" id="edit-precio-venta" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-fecha-adq" class="form-label">Fecha de Adquisición</label>
+                            <input type="date" class="form-control" id="edit-fecha-adq" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Actualizar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/navbar.js"></script>
-    <script src="../js/stock.js"></script> <!-- Incluir el script separado -->
+    <script src="../js/stock.js"></script>
 </body>
 </html>
