validaciones en el CRUD

--- a/LaybackKicks/pages/stock.html
+++ b/LaybackKicks/pages/stock.html
@@ -37,15 +37,15 @@
                 <form id="nuevo-producto">
                     <div class="mb-3">
                         <label for="marca" class="form-label">Marca</label>
-                        <input type="text" class="form-control" id="marca" placeholder="nike" required>
+                        <input type="text" class="form-control" id="marca" placeholder="Ej: Nike" required>
                     </div>
                     <div class="mb-3">
                         <label for="modelo" class="form-label">Modelo</label>
-                        <input type="text" class="form-control" id="modelo" placeholder="jordan" required>
+                        <input type="text" class="form-control" id="modelo" placeholder="Ej: Jordan 1 ''" required>
                     </div>
                     <div class="mb-3">
                         <label for="talla" class="form-label">Talla</label>
-                        <input type="number" class="form-control" id="talla" required>
+                        <input type="number" class="form-control" id="talla" placeholder="0" min="0" required>
                     </div>
                     <div class="mb-3">
                         <label for="condicion" class="form-label">Condicion</label>
@@ -56,15 +56,15 @@
                     </div>
                     <div class="mb-3">
                         <label for="cantidad" class="form-label">Cantidad</label>
-                        <input type="number" class="form-control" id="cantidad" required>
+                        <input type="number" class="form-control" id="cantidad" placeholder="0" min="0" required>
                     </div>
                     <div class="mb-3">
                         <label for="precio-compra" class="form-label">Precio de Compra</label>
-                        <input type="number" class="form-control" id="precio-compra" required>
+                        <input type="text" class="form-control" id="precio-compra" placeholder="0" min="0" required>
                     </div>
                     <div class="mb-3">
                         <label for="precio-venta" class="form-label">Precio Estimado de Venta</label>
-                        <input type="number" class="form-control" id="precio-venta" required>
+                        <input type="text" class="form-control" id="precio-venta" placeholder="0" min="0" required>
                     </div>
                     <div class="mb-3">
                         <label for="fecha-adq" class="form-label">Fecha de Adquisición</label>
