--- a/LaybackKicks/pages/stock.html
+++ b/LaybackKicks/pages/stock.html
@@ -129,6 +129,38 @@
         </div>
     </div>
 
+    <div class="modal fade" id="ventaModal" tabindex="-1" aria-labelledby="ventaModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="ventaModalLabel">Registrar Venta</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            <form id="venta-form">
+                <input type="hidden" id="venta-id-producto">
+                <div class="mb-3">
+                <label for="fecha-venta" class="form-label">Fecha de Venta</label>
+                <input type="date" class="form-control" id="fecha-venta" required>
+                </div>
+                <div class="mb-3">
+                <label for="precio-final" class="form-label">Precio de Venta</label>
+                <input type="number" class="form-control" id="precio-final" placeholder="Ingrese el precio de venta" required>
+                </div>
+                <div class="mb-3">
+                <label for="cantidad-venta" class="form-label">Cantidad Vendida</label>
+                <input type="number" class="form-control" id="cantidad-venta" placeholder="Ingrese la cantidad vendida" required>
+                </div>
+            </form>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-primary" id="registrar-venta-btn">Registrar Venta</button>
+            </div>
+        </div>
+        </div>
+    </div>
+  
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/navbar.js"></script>
