--- a/LaybackKicks/pages/dashboard.html
+++ b/LaybackKicks/pages/dashboard.html
@@ -12,9 +12,9 @@
 
     <div class="container mt-5">
         <h2>Dashboard</h2>
-
+    
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card text-white bg-primary mb-3">
                     <div class="card-header">Monto Invertido en Sneakers</div>
                     <div class="card-body">
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card text-white bg-success mb-3">
                     <div class="card-header">Posible Retorno</div>
                     <div class="card-body">
@@ -30,8 +30,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card text-white bg-warning mb-3">
+                    <div class="card-header">Total de Ventas</div>
+                    <div class="card-body">
+                        <h3 class="card-title">$<span id="total-ventas">0</span></h3>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </div>    
 
 <!-- API de StockX -->
         <div class="row">
