--- a/LaybackKicks/pages/dashboard.html
+++ b/LaybackKicks/pages/dashboard.html
@@ -12,7 +12,7 @@
 
     <div class="container mt-5">
         <h2>Dashboard</h2>
-        <div class="row mt-3 mb-4">
+        <div class="text-white row mt-3 mb-4">
             <div class="col-md-3">
                 <label for="month-select" class="form-label">Mes</label>
                 <select id="month-select" class="form-select form-select-sm">
@@ -30,6 +30,7 @@
                     <option value="12">Diciembre</option>
                 </select>
             </div>
+           
             <div class="col-md-3">
                 <label for="year-select" class="form-label">Año</label>
                 <select id="year-select" class="form-select form-select-sm">
