--- a/LaybackKicks/pages/reportes.html
+++ b/LaybackKicks/pages/reportes.html
@@ -33,10 +33,11 @@
                     </select>
                 </div>
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-primary">Generar y Descargar PDF</button>
+                    <button type="submit" class="btn btn-secondary">Descargar PDF</button>
                 </div>
             </form>
         </div>
+        <div id="report-result" class="mt-3">
     </div>
     
 
