--- a/LaybackKicks/pages/dashboard.html
+++ b/LaybackKicks/pages/dashboard.html
@@ -62,7 +62,7 @@
                 <div class="card text-white bg-warning mb-3">
                     <div class="card-header">Total de Ventas</div>
                     <div class="card-body">
-                        <h3 class="card-title"><span id="total-ventas">0</span></h3>
+                        <h3 class="card-title">$<span id="total-ventas">0</span></h3>
                     </div>
                 </div>
             </div>
