--- a/LaybackKicks/pages/navbar.html
+++ b/LaybackKicks/pages/navbar.html
@@ -17,5 +17,6 @@
                 </li>
             </ul>
         </div>
+        <img src="../img/logo.jpeg" alt="Logo" class="logo-navbar">
     </div>
 </nav>
