reportesv2 falta hacer factura

--- a/LaybackKicks/pages/reportes.html
+++ b/LaybackKicks/pages/reportes.html
@@ -33,7 +33,7 @@
                     </select>
                 </div>
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-secondary">Descargar PDF</button>
+                    <button type="submit" class="btn btn-primary">Generar Reporte</button>
                 </div>
             </form>
         </div>
