--- a/LaybackKicks/pages/g_proveedores.html
+++ b/LaybackKicks/pages/g_proveedores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestionar Proveedores</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -26,6 +26,10 @@
                     <label for="telefono" class="form-label">Teléfono</label>
                     <input type="text" class="form-control" id="telefono" required>
                 </div>
+                <div class="col-md-6">
+                    <label for="productos_id_producto" class="form-label">ID del Producto</label>
+                    <input type="number" class="form-control" id="productos_id_producto" required>
+                </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary w-100">Agregar Proveedor</button>
                 </div>
@@ -41,6 +45,7 @@
                         <th>Nombre</th>
                         <th>Email</th>
                         <th>Teléfono</th>
+                        <th>ID Producto</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
@@ -49,9 +54,47 @@
                 </tbody>
             </table>
         </div>
+
+        <!-- Modal para editar proveedor -->
+        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editModalLabel">Editar Proveedor</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form id="editar-proveedor">
+                        <div class="modal-body">
+                            <input type="hidden" id="edit-id-proveedor">
+                            <div class="mb-3">
+                                <label for="edit-nombre" class="form-label">Nombre del Proveedor</label>
+                                <input type="text" class="form-control" id="edit-nombre" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit-email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="edit-email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit-telefono" class="form-label">Teléfono</label>
+                                <input type="text" class="form-control" id="edit-telefono" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="edit-productos_id_producto" class="form-label">ID del Producto</label>
+                                <input type="number" class="form-control" id="edit-productos_id_producto" required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="../js/g_proveedores.js"></script>
     <script src="../js/navbar.js"></script>
 </body>
