detalles modal editar y generacion de facturas V1

--- a/LaybackKicks/pages/navbar.html
+++ b/LaybackKicks/pages/navbar.html
@@ -10,13 +10,13 @@
                     <a class="nav-link" href="stock.html">Manejar Stock</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="reportes.html">Reportes</a>
+                    <a class="nav-link" href="reportes.html">Reportes y Facturas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="g_usuarios.html">Gestionar Usuarios</a> <!-- Nueva zona para gestionar usuarios -->
+                    <a class="nav-link" href="g_usuarios.html">Gestionar Usuarios</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="g_proveedores.html">Gestionar Proveedores</a> <!-- Nueva zona para gestionar proveedores -->
+                    <a class="nav-link" href="g_proveedores.html">Gestionar Proveedores</a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../index.html">Logout</a>
