--- a/LaybackKicks/pages/stock.html
+++ b/LaybackKicks/pages/stock.html
@@ -12,20 +12,21 @@
 
     <div class="container mt-5">
         <h2 class="text-center">Stock</h2>
+
         <div class="row clearfix">
             <div id="stock-section" class="col-md-8 section-box">
                 <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>ID Producto</th>
-                            <th>Producto</th>
                             <th>Marca</th>
+                            <th>Modelo</th>
                             <th>Talla</th>
                             <th>Condicion</th>
                             <th>Cantidad</th>
                             <th>Precio Compra</th>
                             <th>Precio Venta</th>
-                            <th>Acciones</th>
+                            <th>Acciones</th>                       
                         </tr>
                     </thead>
                     <tbody id="product-list">
@@ -110,11 +111,11 @@
                         </div>
                         <div class="mb-3">
                             <label for="edit-precio-compra" class="form-label">Precio de Compra</label>
-                            <input type="number" class="form-control" id="edit-precio-compra" required>
+                            <input type="text" class="form-control" id="edit-precio-compra" required>
                         </div>
                         <div class="mb-3">
                             <label for="edit-precio-venta" class="form-label">Precio Estimado de Venta</label>
-                            <input type="number" class="form-control" id="edit-precio-venta" required>
+                            <input type="text" class="form-control" id="edit-precio-venta" required>
                         </div>
                         <div class="mb-3">
                             <label for="edit-fecha-adq" class="form-label">Fecha de Adquisición</label>
