validacion de roles Login

--- a/LaybackKicks/pages/formato/formato.html
+++ b/LaybackKicks/pages/formato/formato.html
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="header">
             <div class="company-info">
-                <h2>GDE S.A.</h2>
+                <h2>LaybackKicks</h2>
                 <p>RUT: 76.129.486-5</p>
                 <p>Gestora de Documentos Electrónicos</p>
                 <p>Dirección: Santiago Centro, Chile</p>
