--- a/LaybackKicks/pages/admin/navbar.html
+++ b/LaybackKicks/pages/admin/navbar.html
@@ -19,10 +19,10 @@
                     <a class="nav-link" href="g_proveedores.html">Gestionar Proveedores</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Logout</a>
+                    <a class="nav-link" href="../../index.html">Logout</a>
                 </li>
             </ul>
         </div>
-        <img src="../img/logo.jpeg" alt="Logo" class="logo-navbar">
+        <img src="../../img/logo.jpeg" alt="Logo" class="logo-navbar">
     </div>
 </nav>
