--- a/LaybackKicks/pages/vendedor/v_stock.html
+++ b/LaybackKicks/pages/vendedor/v_stock.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
 <body>
     <div id="navbar-placeholder"></div>
@@ -162,7 +162,7 @@
   
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/navbar.js"></script>
-    <script src="../js/stock.js"></script>
+    <script src="../../js/vendedor/v_navbar.js"></script>
+    <script src="../../js/vendedor/v_stock.js"></script>
 </body>
 </html>
