--- a/LaybackKicks/pages/admin/dashboard.html
+++ b/LaybackKicks/pages/admin/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
 <body>
     <div id="navbar-placeholder"></div>
@@ -96,7 +96,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/navbar.js"></script>
-    <script src="../js/dashboard.js"></script>
+    <script src="../../js/navbar.js"></script>
+    <script src="../../js/dashboard.js"></script>
 </body>
 </html>
