--- a/LaybackKicks/pages/admin/g_proveedores.html
+++ b/LaybackKicks/pages/admin/g_proveedores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestionar Proveedores</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
 <body>
     <div id="navbar-placeholder"></div>
@@ -94,7 +94,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/g_proveedores.js"></script>
-    <script src="../js/navbar.js"></script>
+    <script src="../../js/g_proveedores.js"></script>
+    <script src="../../js/navbar.js"></script>
 </body>
 </html>
