--- a/LaybackKicks/pages/admin/reportes.html
+++ b/LaybackKicks/pages/admin/reportes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generar Reportes y Facturas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
 <body>
     <div id="navbar-placeholder"></div>
@@ -65,8 +65,8 @@
     
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/reportes.js"></script>
-    <script src="../js/navbar.js"></script>
-    <script src="../js/facturas.js"></script>
+    <script src="../../js/reportes.js"></script>
+    <script src="../../js/navbar.js"></script>
+    <script src="../../js/facturas.js"></script>
 </body>
 </html>
