--- a/LaybackKicks/pages/formato/formato.html
+++ b/LaybackKicks/pages/formato/formato.html
@@ -3,63 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Factura</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            font-size: 12px;
+            font-size: 14px;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f9;
+            color: #333;
         }
+
         .container {
-            width: 100%;
+            width: 80%;
             margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding-bottom: 10px;
+            border-bottom: 2px solid #1F2F57; 
         }
+
         .company-info, .invoice-info {
-            width: 45%;
+            width: 48%;
         }
+
+        .company-info img {
+            max-width: 150px; 
+            height: auto;
+            margin-bottom: 10px;
+        }
+
         .invoice-info {
             text-align: right;
         }
+
         .invoice-number {
-            color: red;
-            font-size: 18px;
+            color: #1F2F57; /* Color del logo */
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 5px;
         }
+
         .details {
-            margin-top: 20px;
+            margin-top: 30px;
         }
+
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 10px;
+            margin-top: 20px;
         }
+
         th, td {
-            border: 1px solid black;
-            padding: 8px;
+            border: 1px solid #ddd;
+            padding: 12px;
             text-align: left;
         }
+
         th {
-            background-color: #f2f2f2;
+            background-color: #1F2F57; /* Color del logo */
+            color: #fff;
         }
+
         .totals {
             margin-top: 20px;
             text-align: right;
         }
+
         .totals p {
             font-size: 16px;
+            font-weight: bold;
+        }
+
+        /* Paleta de colores */
+        h2, h3 {
+            color: #1F2F57; 
+        }
+
+        .header p {
+            color: #1F2F57;
         }
     </style>
-    <title>Factura</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="company-info">
-                <h2>LaybackKicks</h2>
+                <img src="/img/logo.jpeg" alt="Logo de la empresa">
+                <h2>LAYBACK KICKS</h2>
                 <p>RUT: 76.129.486-5</p>
-                <p>Gestora de Documentos Electrónicos</p>
+                <p>Venta de zapatillas</p>
                 <p>Dirección: Santiago Centro, Chile</p>
             </div>
             <div class="invoice-info">
@@ -69,9 +110,9 @@
         </div>
 
         <div class="details">
-            <p>Cliente: Nombre del cliente</p>
-            <p>RUT: Cliente RUT</p>
-            <p>Dirección: Dirección del cliente</p>
+            <p><strong>Cliente:</strong> Nombre del cliente</p>
+            <p><strong>RUT:</strong> Cliente RUT</p>
+            <p><strong>Dirección:</strong> Dirección del cliente</p>
         </div>
 
         <table>
@@ -89,7 +130,7 @@
         </table>
 
         <div class="totals">
-            <p><strong>Total: {TOTAL}</strong></p>
+            <p>Total: {TOTAL}</p>
         </div>
     </div>
 </body>
