--- a/LaybackKicks/pages/admin/reportes.html
+++ b/LaybackKicks/pages/admin/reportes.html
@@ -65,8 +65,8 @@
     
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../../js/reportes.js"></script>
-    <script src="../../js/navbar.js"></script>
-    <script src="../../js/facturas.js"></script>
+    <script src="../../js/admin/reportes.js"></script>
+    <script src="../../js/admin/navbar.js"></script>
+    <script src="../../js/admin/facturas.js"></script>
 </body>
 </html>
