--- a/LaybackKicks/pages/admin/dashboard.html
+++ b/LaybackKicks/pages/admin/dashboard.html
@@ -96,7 +96,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../js/navbar.js"></script>
-    <script src="../../js/dashboard.js"></script>
+    <script src="../../js/admin/dashboard.js"></script>
+    <script src="../../js/admin/navbar.js"></script>
 </body>
 </html>
