--- a/LaybackKicks/pages/admin/g_proveedores.html
+++ b/LaybackKicks/pages/admin/g_proveedores.html
@@ -94,7 +94,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script src="../../js/g_proveedores.js"></script>
-    <script src="../../js/navbar.js"></script>
+    <script src="../../js/admin/navbar.js"></script>
+    <script src="../../js/admin/g_proveedores.js"></script>
 </body>
 </html>
