--- a/LaybackKicks/pages/admin/g_usuarios.html
+++ b/LaybackKicks/pages/admin/g_usuarios.html
@@ -83,7 +83,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../../js/g_usuarios.js"></script>
-    <script src="../../js/navbar.js"></script>
+    <script src="../../js/admin/g_usuarios.js"></script>
+    <script src="../../js/admin/navbar.js"></script>
 </body>
 </html>
