--- a/LaybackKicks/pages/admin/stock.html
+++ b/LaybackKicks/pages/admin/stock.html
@@ -162,7 +162,7 @@
   
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../js/navbar.js"></script>
-    <script src="../../js/stock.js"></script>
+    <script src="../../js/admin/navbar.js"></script>
+    <script src="../../js/admin/stock.js"></script>
 </body>
 </html>
