solucion errores en estados, filtros, etc

--- a/LaybackKicks/pages/admin/reportes.html
+++ b/LaybackKicks/pages/admin/reportes.html
@@ -22,6 +22,7 @@
                         <option value="todos">Todos los productos</option>
                         <option value="vendidos">Vendidos</option>
                         <option value="no-vendidos">No vendidos</option>
+                        <option value="cancelado">Cancelado</option>
                     </select>
                 </div>
                 <div class="col-md-6">
