--- a/LaybackKicks/pages/admin/dashboard.html
+++ b/LaybackKicks/pages/admin/dashboard.html
@@ -160,8 +160,8 @@
     <div class="table-container">
         <div class="row">
             <div class="col-md-4">
-                <label for="month-select">Mes</label>
-                <select id="month-select" class="form-control">
+                <label for="month-select-logistica">Mes</label>
+                <select id="month-select-logistica" class="form-control">
                     <option value="1">Enero</option>
                     <option value="2">Febrero</option>
                     <option value="3">Marzo</option>
@@ -177,8 +177,8 @@
                 </select>
             </div>
             <div class="col-md-4">
-                <label for="year-select">Año</label>
-                <select id="year-select" class="form-control">
+                <label for="year-select-logistica">Año</label>
+                <select id="year-select-logistica" class="form-control">
                     <option value="2023">2023</option>
                     <option value="2024">2024</option>
                     <option value="2025">2025</option>
@@ -189,8 +189,8 @@
                 </select>
             </div>
             <div class="col-md-4">
-                <label for="estado-select">Estado Logístico</label>
-                <select id="estado-select" class="form-control">
+                <label for="estado-select-logistica">Estado Logístico</label>
+                <select id="estado-select-logistica" class="form-control">
                     <option value="">Todos los estados</option>
                     <option value="En camino">En camino</option>
                     <option value="En bodega">En bodega</option>
@@ -199,7 +199,7 @@
                 </select>
             </div>
         </div>
-        <button id="filter-button-productos" class="btn btn-primary">Filtrar</button>
+        <button id="filter-button-logistica" class="btn btn-primary">Filtrar</button>
         
         <table class="table">
             <thead>
@@ -218,6 +218,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../js/admin/dashboard.js"></script>
+    <script src="../../js/admin/logistica.js"></script>
     <script src="../../js/admin/navbar.js"></script>
 </body>
 </html>
