Logica a los graficos

--- a/LaybackKicks/pages/admin/dashboard.html
+++ b/LaybackKicks/pages/admin/dashboard.html
@@ -210,9 +210,8 @@
             <canvas id="ventas-mensuales-chart"></canvas>
         </div>
 
-        <!-- Gráfico de Ventas por Categoría -->
-        <div class="card" id="categoriasVentasCard">
-            <canvas id="categorias-ventas-chart"></canvas>
+        <div class="card" id="ventasPorMarcaCard">
+            <canvas id="ventas-por-marca-chart"></canvas>
         </div>
 
         <div class="card">
